<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cjlab.calculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/operand_1_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/operand_1_hint_edit_text" />

        <EditText
            android:id="@+id/operand_2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/operand_2_hint_edit_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:orientation="horizontal">

        <Button
            android:onClick="onAdd"
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/add_button" />

        <Button
            android:onClick="onSub"
            android:id="@+id/sub_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/sub_button" />

        <Button
            android:onClick="onMul"
            android:id="@+id/mul_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/mul_button" />

        <Button
            android:onClick="onDivide"
            android:id="@+id/divide_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/divide_button" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:text="@string/result_title" />

    <TextView
        android:hint="@string/result_text_view_hint"
        android:id="@+id/result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_top" />

</LinearLayout>
